--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 asgiref==3.8.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
+crispy-bootstrap5==2024.10
 Django==5.1.4
 django-ckeditor-5==0.2.15
 django-crispy-forms==2.3
+django-storages==1.14.4
 django-tinymce==4.1.0
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 pillow==11.0.0
+PyJWT==2.10.1
 python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.3
 tzdata==2024.2
 urllib3==2.3.0
+whitenoise==6.8.2
